paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/lvalue_array_fun_c4/sample_005/target.compile.log
error[E0601]: `main` function not found in crate `target`
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/lvalue_array_fun_c4/sample_005/target.rs:1:21
  |
1 | // Failed to extract
  |                     ^ consider adding a `main` function to `benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/lvalue_array_fun_c4/sample_005/target.rs`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0601`.